:tada: splity has updated! 添加了emoji的支持，请修改数据库设置已支持emoji的显示

--- a/style.css
+++ b/style.css
@@ -5133,6 +5133,15 @@ a.next {
 .nice-dark-mode .comment-body {
 	border: none;
 }
+.nice-dark-mode .OwO-logo {
+	background: rgb(29, 31, 32);
+	color: white;
+	border: none;
+}
+.nice-dark-mode .OwO-body {
+	color: rgb(29, 31, 32);
+	text-align: left;
+}
 #article-post img {
 	border-radius: 6px;
 	display: block;
