🎉 splity has updated! 修复了mobile端侧边栏的问题，以及其他的一些问题

--- a/style.css
+++ b/style.css
@@ -4066,7 +4066,9 @@ SIDEBAR STYLE
 	transition: all 0.5s ease-in-out;
 	cursor: pointer;
 }
-
+.mobile-overlay::-webkit-scrollbar {
+    display: none;
+}
 .mobile-overlay.active {
 	display: block;
 	opacity: 1;
