--- a/style.css
+++ b/style.css
@@ -4067,7 +4067,7 @@ SIDEBAR STYLE
 	cursor: pointer;
 }
 .mobile-overlay::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 .mobile-overlay.active {
 	display: block;
@@ -5331,4 +5331,151 @@ a.next {
 }
 .icon-win2 {
 	background-image: url(https://cdn.zrahh.com:4433/usr/uploads/2019/03/win2.png);
+}
+/*yellow*/
+.yellow {
+	background-color: #f7b32d !important;
+}
+
+/*pink*/
+.pink {
+	background-color: #ff5f5f !important;
+}
+
+/*black*/
+.black {
+	background-color: #2c2c2c !important;
+}
+
+/*green*/
+.green {
+	background-color: #8bc24c !important;
+}
+
+/*blue*/
+.blue {
+	background-color: #118df0 !important;
+}
+
+/*white*/
+.white {
+	background-color: #fff !important;
+}
+.white .des,
+.white .title a,
+.white .title span {
+	color: #121111 !important;
+}
+
+/*purple*/
+.purple {
+	background-color: #515bd4 !important;
+}
+
+#line {
+	width: 4px;
+	height: 97.7%;
+	background-color: #666666;
+	position: absolute;
+	top: 120px;
+	bottom: 120px;
+	left: 50%;
+	margin-left: -2px;
+}
+
+#coos .lis:nth-child(even) .item {
+	float: right !important;
+	background-color: #fff;
+}
+#coos .lis:nth-child(even) .g-lin {
+	float: left;
+	left: 0;
+}
+#coos .lis:nth-child(even) .date {
+	left: 0px;
+	right: inherit;
+}
+#coos .lis:nth-child(even) .ke {
+	float: right;
+}
+.tag {
+	font-size: 18px;
+	color: #fff;
+}
+.archive-title {
+	width: 100%;
+	font-size: 16px;
+	height: auto;
+	margin: 10px auto;
+	color: #fff !important;
+	font-weight: 700;
+}
+.archive-title a {
+	color: #fff !important;
+}
+
+.lis {
+	width: 100%;
+	height: 160px;
+	margin-top: 40px;
+}
+.spot {
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	left: 50%;
+	margin-left: -10px;
+	background-color: #666666;
+	border: 4px solid #f6f7f8;
+	border-radius: 20px;
+	margin-top: 5px;
+}
+.archive-item {
+	width: 320px;
+	height: auto;
+	float: left;
+	background-color: #fff;
+	box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 20px 8px;
+	border-radius: 6px;
+	padding: 14px;
+    position: relative;
+    z-index: 9999;
+}
+.ke {
+	height: 100%;
+}
+.archive-date {
+	position: absolute;
+	top: -28px;
+	right: 0px;
+	padding: 3px 8px 3px;
+	color: #666;
+	font-size: 12px;
+	border-radius: 2px;
+}
+.nice-dark-mode .archive-date {
+	color: #fff;
+}
+.archive-tag {
+	font-size: 18px;
+	color: #fff;
+}
+.archive-des {
+	color: #fff;
+}
+.archive-img {
+	border-radius: 6px;
+	box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 20px 8px;
+	width: 100%;
+    max-height: 275px;
+    object-fit: cover;
+}
+@media (max-width: 767px) {
+	.archive-img {
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 20px 8px;
+        width: 100%;
+        max-height: 75px;
+        object-fit: cover;
+    }
 }
